--- a/app/src/main/res/layout/item_sent_doc_chat.xml
+++ b/app/src/main/res/layout/item_sent_doc_chat.xml
@@ -41,6 +41,8 @@
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="16sp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 tools:text="cv_gerry.pdf"/>
 
 <!--            <TextView-->
